<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_centerInParent="true"
        android:text="@string/wide_search_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"/>
    <Spinner
        style="@style/SpinnerItem"
        android:id="@+id/wide_search_spinner_cities"
        android:layout_marginBottom="5dp"
        />
    <TextView
        android:layout_centerInParent="true"
        android:text="@string/wide_search_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"/>
    <Spinner
        style="@style/SpinnerItem"
        android:id="@+id/wide_search_spinner_category"
        android:layout_marginBottom="5dp"
        />
    <TextView
        android:layout_centerInParent="true"
        android:text="@string/wide_search_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"/>
    <Spinner
        style="@style/SpinnerItem"
        android:id="@+id/wide_search_spinner_sort"
        android:layout_marginBottom="5dp"
        />
    <RadioGroup
        android:id="@+id/wide_search_radoigroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/wide_search_rb_pair"
            android:text="@string/wide_search_rb_pair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/wide_search_rb_group"
            android:text="@string/wide_search_rb_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>
    <CheckBox
        android:id="@+id/wide_search_checkbox"
        android:text="@string/wide_search_auction_ended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <Button
            android:id="@+id/wide_search_btn_search"
            android:text="@string/wide_search_btn_search"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:text="@string/wide_search_btn_cancel"
            android:id="@+id/wide_search_btn_cancel"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</merge>