<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <TextView
        android:layout_centerInParent="true"
        android:text="@string/wide_search_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Spinner
        android:id="@+id/wide_search_spinner_cities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_centerInParent="true"
        android:text="@string/wide_search_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Spinner
        android:id="@+id/wide_search_spinner_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_centerInParent="true"
        android:text="@string/wide_search_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Spinner
        android:id="@+id/wide_search_spinner_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <RadioGroup
        android:id="@+id/wide_search_radoigroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/wide_search_rb_pair"
            android:text="@string/wide_search_rb_pair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/wide_search_rb_group"
            android:text="@string/wide_search_rb_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>
    <CheckBox
        android:id="@+id/wide_search_checkbox"
        android:text="@string/wide_search_auction_ended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/wide_search_btn_search"
        android:text="@string/wide_search_btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>