<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:padding="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:textSize="20dp"
        android:text="@string/phone_change_message"
        android:id="@+id/changePhoneMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="8dp"
        android:layout_below="@+id/changePhoneMessage"
        android:textSize="16dp"
        android:id="@+id/changePhoneTitle"
        android:text="@string/phone_change_new_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/lnPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/changePhoneTitle"
        android:orientation="horizontal">

        <EditText
            android:hint="@string/phone_format"
            android:id="@+id/etPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="phone"/>

        <Button
            style="@style/Maesens.Button.Light"
            android:id="@+id/btnChangeNumber"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/take_code"/>
    </LinearLayout>

    <TextView
        android:textSize="16dp"
        android:id="@+id/changeCode"
        android:layout_below="@+id/lnPhone"
        android:text="@string/phone_change_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/lnCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/changeCode"
        android:orientation="horizontal">

        <EditText
            android:hint="@string/code_format"
            android:id="@+id/etCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="phone"/>

        <Button
            android:layout_weight="1"
            style="@style/Maesens.Button.Light"
            android:id="@+id/btnCheckCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm_code"/>
    </LinearLayout>

</RelativeLayout>